src/sfdc/base/main/default/objects/B2C_Integration_Field_Mappings__mdt/fields/B2C_Commerce_Attribute_Type__c.field-meta.xml
<CustomField>
    <fullName>B2C_Commerce_Attribute_Type__c</fullName>
    <inlineHelpText>The type of the attribute within B2C Commerce. This list only contains the available types within the Salesforce Platform.</inlineHelpText>
    <label>B2C Commerce Attribute Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>boolean</fullName>
                <default>true</default>
                <label>boolean</label>
            </value>
            <value>
                <fullName>string</fullName>
            </value>
            <value>
                <fullName>integer</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>