src/sfdc/base/main/default/objects/B2C_Integration_Field_Mappings__mdt/fields/B2C_Commerce_OCAPI_Attribute__c.field-meta.xml
<CustomField>
    <fullName>B2C_Commerce_OCAPI_Attribute__c</fullName>
    <description>... represents the B2C Commerce OCAPI response attribute mapped to the Service Cloud attribute.</description>
    <inlineHelpText>... represents the B2C Commerce OCAPI response attribute mapped to the Service Cloud attribute.</inlineHelpText>
    <label>B2C Commerce OCAPI Attribute</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>