src/sfdc/base/main/default/objects/B2C_Integration_Field_Mappings__mdt/fields/Enable_for_Integration__c.field-meta.xml
<CustomField>
    <fullName>Enable_for_Integration__c</fullName>
    <defaultValue>true</defaultValue>
    <description>... when checked, this field mapping will be processed during multi-cloud integration events between B2C Commerce and Service Clouds.  If un-checked, this field mapping will ignored during multi-cloud integration events.</description>
    <inlineHelpText>... when checked, this field mapping will be processed during multi-cloud integration events between B2C Commerce and Service Clouds.  If un-checked, this field mapping will ignored during multi-cloud integration events.</inlineHelpText>
    <label>Enable for Multi-Cloud Integration</label>
    <type>Checkbox</type>
</CustomField>