src/sfdc/base/main/default/objects/B2C_Integration_Field_Mappings__mdt/fields/Field_Description__c.field-meta.xml
<CustomField>
    <fullName>Field_Description__c</fullName>
    <description>... represents the customer-facing description for a given field.  This should only be used to describe fields for externalObjects, as Salesforce Object fields will carry their own field descriptions.</description>
    <inlineHelpText>... represents the customer-facing description for a given field.  This should only be used to describe fields for externalObjects, as Salesforce Object fields will carry their own field descriptions.</inlineHelpText>
    <label>Field Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>