src/sfdc/base/main/default/objects/B2C_Integration_Field_Mappings__mdt/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>... represents the customer-facing label to be used by a given field.  This field should only be used for externalObject mappings -- as the Salesforce Object fields carry their own label.</description>
    <inlineHelpText>... represents the customer-facing label to be used by a given field.  This field should only be used for externalObject mappings -- as the Salesforce Object fields carry their own label.</inlineHelpText>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>