src/sfdc/base/main/default/objects/B2C_Integration_Field_Mappings__mdt/fields/Is_Test_Record__c.field-meta.xml
<CustomField>
    <fullName>Is_Test_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... describes if the current meta-data type record is a test-record which should only be accessed during unit testing.  Test records are not referenced during actual / production operation.</description>
    <inlineHelpText>... describes if the current meta-data type record is a test-record which should only be accessed during unit testing.  Test records are not referenced during actual / production operation.</inlineHelpText>
    <label>Is Test Record</label>
    <type>Checkbox</type>
</CustomField>