src/sfdc/base/main/default/objects/B2C_Integration_Field_Mappings__mdt/fields/Position_in_UI__c.field-meta.xml
<CustomField>
    <fullName>Position_in_UI__c</fullName>
    <defaultValue>25</defaultValue>
    <description>... represents the position of the field in the forms within the Salesforce Core Platform UI</description>
    <inlineHelpText>... represents the position of the field in the forms within the Salesforce Core Platform UI</inlineHelpText>
    <label>Position in UI</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>