src/sfdc/base/main/default/objects/B2C_Integration_Field_Mappings__mdt/fields/Push_Updates_to_B2C_Commerce__c.field-meta.xml
<CustomField>
    <fullName>Push_Updates_to_B2C_Commerce__c</fullName>
    <defaultValue>true</defaultValue>
    <description>... when checked, updates made to mapped Service Cloud Contact attributes are pushed to their B2C Commerce attribute counterparts.</description>
    <inlineHelpText>... when checked, updates made to mapped Service Cloud Contact attributes are pushed to their B2C Commerce attribute counterparts.</inlineHelpText>
    <label>Push Updates to B2C Commerce</label>
    <type>Checkbox</type>
</CustomField>