src/sfdc/base/main/default/objects/B2C_Integration_Field_Mappings__mdt/fields/Show_in_UI__c.field-meta.xml
<CustomField>
    <fullName>Show_in_UI__c</fullName>
    <defaultValue>true</defaultValue>
    <description>... when checked, show the field in the Salesfore Core platform UI for view/edit purpose.</description>
    <inlineHelpText>... when checked, show the field in the Salesfore Core platform UI for view/edit purpose.</inlineHelpText>
    <label>Show in UI</label>
    <type>Checkbox</type>
</CustomField>