src/sfdc/base/main/default/objects/B2C_Integration_Field_Mappings__mdt/listViews/B2C_Customer_Address_Mappings.listView-meta.xml
<ListView>
    <fullName>B2C_Customer_Address_Mappings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>B2C_Commerce_OCAPI_Attribute__c</columns>
    <columns>Service_Cloud_Attribute__c</columns>
    <columns>Enable_for_Integration__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Cloud_Object__c</field>
        <operation>equals</operation>
        <value>B2C_CustomerAddress__x</value>
    </filters>
    <label>B2C Customer Address Mappings</label>
</ListView>